@@ -1,5 +1,14 @@
 2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02840]
+	* scripts/w3mmail.cgi.in: use LOCAL_COOKIE
+	* scripts/w3mmail.cgi.in: no need HTTP response header
+	* scripts/w3mmail.cgi.in: fix typo $nkf_NKF
+	* scripts/w3mmail.cgi.in: eval { use NKF; } is perl5ism
+	* scripts/multipart/multipart.cgi.in: ditto
+
+2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02835]
 	* rc.c: move label_topline, nextpage_topline from param3 to param1
 		param7 is SSL Setting
@@ -1949,4 +1958,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.220 2002/01/15 16:07:58 ukai Exp $
+$Id: ChangeLog,v 1.221 2002/01/15 16:13:39 ukai Exp $
